--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Add Map</title>
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
     <script src="./index.js"></script>
   </head>
   <body>
