--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h3>Save the Date!</h3>
     
-    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCucx8l97Zx5CGexRd-B4zwziAYnAJBYic&q=GFR8%2BV7+Περτούλι&pb=!1m18!1m12!1m3!1d124075.42837052763!2d21.435952858325003!3d39.526665808256325!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x135940719f6e2175%3A0x34d546c75f6bd36!2zzpHPgc-Hzr_Ovc-EzrnOus-MIM6nzrHPhM62zrfOs86szrrOtyAtIFRoZSBDaGF0emlnYWtpcyBNYW5vcg!5e0!3m2!1sel!2sgr!4v1647691938702!5m2!1sel!2sgr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCucx8l97Zx5CGexRd-B4zwziAYnAJBYic&q=GFR8%2BV7+Περτούλι" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     <!-- JS API 
       <div id="map"></div>
       <script
