--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <h3>Save the Date!</h3>
     
-    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCucx8l97Zx5CGexRd-B4zwziAYnAJBYic&q=GFR8%2BV7+Περτούλι" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCucx8l97Zx5CGexRd-B4zwziAYnAJBYic&q=ChIJdSFun3FAWRMRNr32dWxUTQM"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+    </iframe>
     <!-- JS API 
       <div id="map"></div>
       <script
