--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
   <body>
     <h3>Save the Date!</h3>
     
-    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCucx8l97Zx5CGexRd-B4zwziAYnAJBYic&q=place_id:ChIJdSFun3FAWRMRNr32dWxUTQM&zoom=10"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-    </iframe>
+    <div class="map-container">
+      <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyCucx8l97Zx5CGexRd-B4zwziAYnAJBYic&q=place_id:ChIJdSFun3FAWRMRNr32dWxUTQM&zoom=10"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+      </iframe>
+    </div>
     <!-- JS API 
       <div id="map"></div>
       <script
