- Add menu btn animations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   </head>
   <body >
     <header id="theHeader">
-      <div class="menu-btn" onclick="menuToggle()"><button>X</button></div>
+      <div class="menu-btn" onclick="menuToggle()">
+        <div class="wrapper-menu">
+          <div class="line-menu half start"></div>
+          <div class="line-menu"></div>
+          <div class="line-menu half end"></div>
+        </div>
+      </div>
 
       <div id="linksContainer" class="links">
         <a href="#date">Date</a>
