- Add contact link icons - refactor timer

--- a/index.html
+++ b/index.html
@@ -48,12 +48,29 @@
         
         <h1 class="greek-sans">Κώστας &#9829; Βίλη</h1>
 
-        <div class="date-container">
-          <h3 class="eng-handwrite" style="margin-bottom:0; font-size: 1.5rem;">The final countdown :</h3>
-          <div id="timer"></div>
+        <div class="date-container content-section">
+          <h3 class="eng-handwrite">The final countdown :</h3>
+          <div id="timer">
+            <div class="flex1">
+              <div>Days</div>
+              <div class="days">130</div>
+            </div>
+            <div class="flex1">
+              <div>Hours</div>
+              <div class="hours">24</div>
+            </div>
+            <div class="flex1">
+              <div>Minutes</div>
+              <div class="minutes">00</div>
+            </div>
+            <div class="flex1">
+              <div>Seconds</div>
+              <div class="seconds">00</div>
+            </div>
+          </div>
 
-          <h3 class="eng-handwrite" style="font-size: 2rem; margin: 0.5rem">Join us!</h3>
-          <p class="greek-sans" style="margin-top: 0">Σάββατο<br>30 Ιουλίου 2022<br>6 μ.μ.</p>
+          <h3 class="eng-handwrite">Join us!</h3>
+          <p class="greek-sans" style="margin-top: 0.5rem; margin-bottom: 1.5rem;">Σάββατο<br>30 Ιουλίου 2022<br>6 μ.μ.</p>
         </div>
         </div>
       </div>
@@ -111,10 +128,20 @@
       <div class="back-static" id="stay"></div>
       <div class="content-section">
         <hr class="separator">
-        <p class="greek-sans">Κι επειδή θέλουμε να σας κάνουμε τη ζωή εύκολη, για πληροφορίες σχετικά με τη διαμονή:<br>
-          <span style="white-space: nowrap;"><b>* 2434 091 146 (reception)</b></span><br>
-          <span style="white-space: nowrap;"><b>* 6980 144 633 (Μπέτυ)</b></span><br>
-          <span style="white-space: nowrap;"><b>* info@chatzigaki.gr</b></span>
+        <h3 class="eng-handwrite">Accomodation</h3>
+        <p class="greek-sans">Για πληροφορίες σχετικά με τη διαμονή:<br><br>
+          <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
+            <img class="fa-icon" src="phone.svg">
+            <a href="tel:2434091146" class="contact-link"><b>2434 091 146 (reception)</b></a><br>
+          </div>
+          <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
+            <img class="fa-icon" src="mobile.svg">
+            <a href="tel:6980144633" class="contact-link"><b> 6980 144 633 (Μπέτυ)</b></a><br>
+          </div>
+          <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
+            <img class="fa-icon" src="mail.svg">
+            <a href="mailto:info@chatzigaki.gr" class="contact-link"><b> info@chatzigaki.gr</b></a>
+          </div>
         </p>
         <hr class="separator">
       </div>
@@ -170,7 +197,7 @@
       <div class="back-static" id="scan"></div>
       <hr class="separator">
       <div class="content-section"><h3 class="eng-handwrite">Scan here and save our wedsite!</h3>
-        <img style="height: 20vw; margin-top: 1rem;" src="./qr.svg">
+        <img style="height: 20vh; margin-top: 1rem;" src="./qr.svg">
       </div>
       <hr class="separator">
     </div>
