--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Κώστας & Βίλη</title>
     <meta charset="UTF-8">
-    <meta name="theme-color" content="#effff0">
+    <meta name="theme-color" content="#dec6ff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" type="text/css" href="./styles.css" />
