--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
       </div>
 
       <div id="linksContainer" class="links">
-        <a href="#date">Date</a>
+        <a href="#date">Save the Date</a>
         <a href="#families">Familes</a>
         <a href="#best">Best Couple</a>
         <a href="#ceremony">The Ceremony</a>
         <a href="#party">The Party</a>
+        <a href="#map">Directions</a>
         <a href="#stay">Accomodation</a>
         <a href="#rsvp">RSVP</a>
         <a href="#hastag">#Hashtag</a>
         <a href="#honeymoon">Honeymoon</a>
         <a href="#contact">Contact</a>
-        
         <a href="#seeyou">See you!</a>
       </div>
 
