- Add social links

--- a/index.html
+++ b/index.html
@@ -193,13 +193,33 @@
         <hr class="separator">
       </div>
     </div>
-
+    <!-- <br><b>Κ: 6947 324 520&nbsp;&nbsp;&nbsp;&nbsp;Β: 6986 728 205</b><br>facebook/instagram/viber -->
     <div class="scroll-snap">
       <div class="back-static" id="contact"></div>
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite">Get in touch!</h3>
-        <p class="greek-sans">Για οποιαδήποτε άλλη πληροφορία, επικοινωνήστε μαζί μας!<br><b>Κ: 6947 324 520&nbsp;&nbsp;&nbsp;&nbsp;Β: 6986 728 205</b><br>facebook/instagram/viber</p>
+        <p class="greek-sans">Για οποιαδήποτε άλλη πληροφορία, επικοινωνήστε μαζί μας!
+          <div style="display:flex; justify-content: space-evenly;">
+            <div style="margin: 1rem; flex: 1 1 auto;">
+              <div style="font-size: 1.2rem;">Κώστας<br>6947 324 520</div>
+              <div style="display:flex; justify-content: space-evenly; align-items: center; padding-top: 1rem;">
+                <a href="tel:6947324520" class="contact-link"><img class="fa-icon large" src="mobile.svg"></a>
+                <a href="https://m.me/ktsangop" class="contact-link"><img class="fa-icon large" src="fb.svg"></a>
+                <a href="viber://contact?number=6947324520" class="contact-link"><img class="fa-icon large" src="viber.svg"></a>
+              </div>
+            </div>
+            <div style="margin: 1rem; flex: 1 1 auto;">
+              <div style="font-size: 1.2rem;">Βίλη<br>6986 728 205</div>
+              <div style="display:flex; justify-content: space-evenly; align-items: center; padding-top: 1rem;">
+                <a href="tel:6986728205" class="contact-link"><img class="fa-icon large" src="mobile.svg"></a>
+                <a href="instagram://user?username=miss.villy" class="contact-link"><img class="fa-icon large" src="ig.svg"></a>
+                <a href="https://m.me/vili.valo" class="contact-link"><img class="fa-icon large" src="fb.svg"></a>
+                <a href="viber://contact?number=6986728205" class="contact-link"><img class="fa-icon large" src="viber.svg"></a>
+              </div>
+            </div>
+          </div>
+        </p>
         <hr class="separator">
       </div>
     </div>
