--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="content-section">
           <hr class="separator">
           <h3 class="eng-handwrite">Best man & woman</h3>
-          <p class="greek-sans">Γιάννης και Ελευθερία Παπαβασιλείου</p>
+          <p class="greek-sans">Γιάννης και Ελευθερία Παπαβασιλείου<br>…όταν το #egfolegandros έγινε η αφορμή για να γνωριστούμε!</p>
           <hr class="separator">
         </div>
       </div>
@@ -104,8 +104,7 @@
         <div class="content-section">
           <hr class="separator">
           <h3 class="eng-handwrite">The wedding ceremony</h3>
-          <h3 class="eng-handwrite" style="margin:0;">(a.k.a. “the mystery”)</h3>
-          <p class="greek-sans">Εξωκκλήσι Αγίας Παρασκευής<br>Αρχοντικό Χατζηγάκη<br>Περτούλι Τρικάλων</p>
+          <p class="greek-sans">a.k.a. “the mystery” θα γίνει στο <b>Εξωκλήσι της Αγίας Παρασκευής</b> στο <b>Αρχοντικό Χατζηγάκη</b> στο εξωτικό <b>Περτούλι Τρικάλων</b></p>
           <hr class="separator">
         </div>
       </div>
@@ -115,7 +114,9 @@
         <div class="content-section">
           <hr class="separator">
           <h3 class="eng-handwrite">The BIG party</h3>
-          <p class="greek-sans">Ο μεγάλος χαμούλης θα γίνει μέσα στα δέντρα, στον προαύλιο χώρο του αρχοντικού μας!<br>Εντάξει του Χατζηγάκη είναι…</p>
+          <p class="greek-sans">Ο παρτάρα θα γίνει μέσα στα δέντρα, στον προαύλιο χώρο του αρχοντικού μας!<br>Βασικά εντάξει, του Χατζηγάκη είναι…</p>
+          <p class="greek-sans">Βρείτε το μέρος στο χάρτη</p>
+          <p><a href="#map" style="text-decoration: none; color: white;"><h3 class="eng-handwrite">Map</h3></a></p>
           <hr class="separator">
         </div>
       </div>
@@ -142,16 +143,20 @@
         <h3 class="eng-handwrite">Accomodation</h3>
         <p class="greek-sans">Για πληροφορίες σχετικά με τη διαμονή:<br><br>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
+            <img class="fa-icon" src="web.svg">
+            <a href="https://www.chatzigaki.gr/" class="contact-link"><b>www.chatzigaki.gr</b></a>
+          </div>
+          <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
+            <img class="fa-icon" src="mail.svg">
+            <a href="mailto:info@chatzigaki.gr" class="contact-link"><b>info@chatzigaki.gr</b></a>
+          </div>
+          <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
             <img class="fa-icon" src="phone.svg">
             <a href="tel:2434091146" class="contact-link"><b>2434 091 146 (reception)</b></a><br>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
             <img class="fa-icon" src="mobile.svg">
-            <a href="tel:6980144633" class="contact-link"><b> 6980 144 633 (Μπέτυ)</b></a><br>
-          </div>
-          <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon" src="mail.svg">
-            <a href="mailto:info@chatzigaki.gr" class="contact-link"><b> info@chatzigaki.gr</b></a>
+            <a href="tel:6980144633" class="contact-link"><b>6980 144 633 (Κα. Μπέτυ)</b></a><br>
           </div>
         </p>
         <hr class="separator">
@@ -163,8 +168,7 @@
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite">Répondez s'il vous plaît</h3>
-        <p class="greek-sans">C'était superbe αν θα μας ενημερώνατε για την παρουσία ή την απουσία σας μέχρι 1/7/2022. Θα χαρούμε να σας δούμε όλους εκεί!
-        </p>
+        <p class="greek-sans">Παρακαλούμε ενημερώστε μας για την παρουσία ή την απουσία σας μέχρι 1/7/2022. Θα χαρούμε να σας δούμε όλους εκεί!</p>
         <hr class="separator">
       </div>
     </div>
@@ -189,7 +193,7 @@
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite">Honeymoon Fund</h3>
-        <p class="greek-sans">Έλα να πάμε στο νησί … μόνο εγώ κι εσύ!<br>IBAN:</p>
+        <p class="greek-sans">Η φάση είναι <i>“έλα να πάμε στο νησί … μόνο εγώ κι εσύ!”</i><br>IBAN:</p>
         <hr class="separator">
       </div>
     </div>
