- Add fancy map link

--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
           <hr class="separator">
           <h3 class="eng-handwrite">The BIG party</h3>
           <p class="greek-sans">Ο παρτάρα θα γίνει μέσα στα δέντρα, στον προαύλιο χώρο του αρχοντικού μας!<br>Βασικά εντάξει, του Χατζηγάκη είναι…</p>
+          <br>
           <p class="greek-sans">Βρείτε το μέρος στο χάρτη</p>
-          <p><a href="#map" style="text-decoration: none; color: white;"><h3 class="eng-handwrite">Map</h3></a></p>
+          <p><a href="#map" class="eng-handwrite map-link">Map<br><img class="fa-icon" style="padding-top: 0.5rem; width: 2.5rem; filter:none;" src="down.svg"></a></p>
+
           <hr class="separator">
         </div>
       </div>
