--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="theme-color" content="#dec6ff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:title" content="Κώστας & Βίλη" />
+    <meta property="og:image" content="preview.jpg" />
+
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
