--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
             <a href="tel:6980144633" class="contact-link"><b>6980 144 633 (Κα. Μπέτυ)</b></a><br>
           </div>
         </p>
+        <p>Για κράτηση δωματίου στο αρχοντικό, μην ξεχάσετε να αναφέρετε ότι είστε καλεσμένοι στο γάμο μας!</p>
         <hr class="separator">
       </div>
     </div>
