--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite">Accomodation</h3>
-        <p class="greek-sans">Για πληροφορίες σχετικά με τη διαμονή:<br><br>
+        <p class="greek-sans">Για πληροφορίες σχετικά με τη διαμονή στο Αρχοντικό:<br><br>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
             <img class="fa-icon" src="web.svg">
             <a href="https://www.chatzigaki.gr/" class="contact-link"><b>www.chatzigaki.gr</b></a>
@@ -164,7 +164,7 @@
             <a href="tel:6980144633" class="contact-link"><b>6980 144 633 (Κα. Μπέτυ)</b></a><br>
           </div>
         </p>
-        <p>Για κράτηση δωματίου στο αρχοντικό, μην ξεχάσετε να αναφέρετε ότι είστε καλεσμένοι στο γάμο μας!</p>
+        <p>Για κράτηση δωματίου, μην ξεχάσετε να αναφέρετε ότι είστε καλεσμένοι στον γάμο μας!</p>
         <hr class="separator">
       </div>
     </div>
