--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
         <h3 class="eng-handwrite">Accomodation</h3>
         <p class="greek-sans">Για πληροφορίες σχετικά με τη διαμονή στο Αρχοντικό:<br><br>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon" src="web.svg">
+            <img class="fa-icon ml-2" src="web.svg">
             <a href="https://www.chatzigaki.gr/" class="contact-link"><b>www.chatzigaki.gr</b></a>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon" src="mail.svg">
+            <img class="fa-icon ml-2" src="mail.svg">
             <a href="mailto:info@chatzigaki.gr" class="contact-link"><b>info@chatzigaki.gr</b></a>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon" src="phone.svg">
+            <img class="fa-icon ml-2" src="phone.svg">
             <a href="tel:2434091146" class="contact-link"><b>2434 091 146 (reception)</b></a><br>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon" src="mobile.svg">
+            <img class="fa-icon ml-2" src="mobile.svg">
             <a href="tel:6980144633" class="contact-link"><b>6980 144 633 (Κα. Μπέτυ)</b></a><br>
           </div>
         </p>
@@ -188,7 +188,7 @@
         </p>
       </div>
 
-      <div class="content-section"><h3 class="eng-handwrite" style="margin: 4px 0;">#LosTsangoLeros</h3>
+      <div class="content-section"><h3 class="eng-handwrite" style="margin: 4px 0;">#vkwedinpertouli</h3>
         <p class="greek-sans">Δείξτε μας εσάς, το νέο σας look, το wedding outfit σας, το επόμενο GNTM, βγείτε με το άλλο σας μισό, το crush σας, τον θείο και τη θεία, την bestie, τον bro, όλοι μαζί και μόνοι, selfie οr not! Δώστε μας το vibe του καλοκαιριού, την αγάπη σας, τις χορευτικές σας φιγούρες, και χαρίστε μας ένα τεράστιο χαμόγελο για να έχουμε τις πιο όμορφες αναμνήσεις!</p>
         <hr class="separator">
       </div>
@@ -212,7 +212,7 @@
         <p class="greek-sans">Για οποιαδήποτε άλλη πληροφορία, επικοινωνήστε μαζί μας!
           <div style="display:flex; justify-content: space-evenly;">
             <div style="margin: 1rem; flex: 1 1 auto;">
-              <div style="font-size: 1.2rem;">Κώστας<br>6947 324 520</div>
+              <div style="font-size: 1.2rem;" class="contact-link">Κώστας<br>6947 324 520</div>
               <div style="display:flex; justify-content: space-evenly; align-items: center; padding-top: 1rem;">
                 <a href="tel:6947324520" class="contact-link"><img class="fa-icon large" src="mobile.svg"></a>
                 <a href="https://m.me/ktsangop" class="contact-link"><img class="fa-icon large" src="fb.svg"></a>
@@ -220,7 +220,7 @@
               </div>
             </div>
             <div style="margin: 1rem; flex: 1 1 auto;">
-              <div style="font-size: 1.2rem;">Βίλη<br>6986 728 205</div>
+              <div style="font-size: 1.2rem;" class="contact-link">Βίλη<br>6986 728 205</div>
               <div style="display:flex; justify-content: space-evenly; align-items: center; padding-top: 1rem;">
                 <a href="tel:6986728205" class="contact-link"><img class="fa-icon large" src="mobile.svg"></a>
                 <a href="instagram://user?username=miss.villy" class="contact-link"><img class="fa-icon large" src="ig.svg"></a>
