--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="content-section">
           <hr class="separator">
           <h3 class="eng-handwrite">The Families</h3>
-          <p class="greek-sans">Γιάννης και Κλειώ Τσαγγοπούλου<br>Χάρης και Βούλα Λέρα<br><br>...Επειδή χωρίς αυτούς δεν θα γινόταν τίποτα από όλα αυτά!<br>
+          <p class="greek-sans">Γιάννης και Κλειώ Τσαγγοπούλου<br>Χάρης και Βούλα Λέρα<br><br>...γιατί χωρίς αυτούς δεν θα γινόταν τίποτα από όλα αυτά,<br>
             <span class="eng-handwrite" style="font-size: 1.7rem;">Thank you much and love you heaps!</span>
           </p>
           <hr class="separator">
