- fix iOS phone links - page_5 to jpeg - minor stylistic fixes - spelling check fixes

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 
       <div id="linksContainer" class="links">
         <a href="#date">Save the Date</a>
-        <a href="#families">Familes</a>
+        <a href="#families">Families</a>
         <a href="#best">Best Couple</a>
         <a href="#ceremony">The Ceremony</a>
         <a href="#party">The Party</a>
         <a href="#map">Directions</a>
-        <a href="#stay">Accomodation</a>
+        <a href="#stay">Accommodation</a>
         <a href="#rsvp">RSVP</a>
         <a href="#hastag">#Hashtag</a>
         <a href="#honeymoon">Honeymoon</a>
@@ -97,7 +97,7 @@
         <div class="content-section">
           <hr class="separator">
           <h3 class="eng-handwrite">Best man & woman</h3>
-          <p class="greek-sans">Γιάννης και Ελευθερία Παπαβασιλείου<br>…όταν το #egfolegandros έγινε η αφορμή για να γνωριστούμε!</p>
+          <p class="greek-sans">Γιάννης και Ελευθερία Παπαβασιλείου<br>…όταν το #egfolegandros έγινε η αφορμή το 2018 να γνωριστούμε!</p>
           <hr class="separator">
         </div>
       </div>
@@ -145,26 +145,26 @@
       <div class="back-static" id="stay"></div>
       <div class="content-section">
         <hr class="separator">
-        <h3 class="eng-handwrite">Accomodation</h3>
+        <h3 class="eng-handwrite">Accommodation</h3>
         <p class="greek-sans">Για πληροφορίες σχετικά με τη διαμονή στο Αρχοντικό:<br><br>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon ml-2" src="web.svg">
+            <img class="fa-icon mr-2" src="web.svg">
             <a href="https://www.chatzigaki.gr/" class="contact-link"><b>www.chatzigaki.gr</b></a>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon ml-2" src="mail.svg">
+            <img class="fa-icon mr-2" src="mail.svg">
             <a href="mailto:info@chatzigaki.gr" class="contact-link"><b>info@chatzigaki.gr</b></a>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon ml-2" src="phone.svg">
+            <img class="fa-icon mr-2" src="phone.svg">
             <a href="tel:2434091146" class="contact-link"><b>2434 091 146 (reception)</b></a><br>
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
-            <img class="fa-icon ml-2" src="mobile.svg">
+            <img class="fa-icon mr-2" src="mobile.svg">
             <a href="tel:6980144633" class="contact-link"><b>6980 144 633 (Κα. Μπέτυ)</b></a><br>
           </div>
         </p>
-        <p>Για κράτηση δωματίου, μην ξεχάσετε να αναφέρετε ότι είστε καλεσμένοι στον γάμο μας!</p>
+        <p style="margin-top: 1rem;">Για κράτηση δωματίου, μην ξεχάσετε να αναφέρετε ότι είστε καλεσμένοι στον γάμο μας!</p>
         <hr class="separator">
       </div>
     </div>
@@ -212,7 +212,7 @@
         <p class="greek-sans">Για οποιαδήποτε άλλη πληροφορία, επικοινωνήστε μαζί μας!
           <div style="display:flex; justify-content: space-evenly;">
             <div style="margin: 1rem; flex: 1 1 auto;">
-              <div style="font-size: 1.2rem;" class="contact-link">Κώστας<br>6947 324 520</div>
+              <a style="font-size: 1.2rem;" href="tel:6947324520" class="contact-link">Κώστας<br>6947 &zwj;324 &zwj;520</a>
               <div style="display:flex; justify-content: space-evenly; align-items: center; padding-top: 1rem;">
                 <a href="tel:6947324520" class="contact-link"><img class="fa-icon large" src="mobile.svg"></a>
                 <a href="https://m.me/ktsangop" class="contact-link"><img class="fa-icon large" src="fb.svg"></a>
@@ -220,7 +220,7 @@
               </div>
             </div>
             <div style="margin: 1rem; flex: 1 1 auto;">
-              <div style="font-size: 1.2rem;" class="contact-link">Βίλη<br>6986 728 205</div>
+              <a style="font-size: 1.2rem;" href="tel:6986728205" class="contact-link">Βίλη<br>6986 &zwj;728 &zwj;205</a>
               <div style="display:flex; justify-content: space-evenly; align-items: center; padding-top: 1rem;">
                 <a href="tel:6986728205" class="contact-link"><img class="fa-icon large" src="mobile.svg"></a>
                 <a href="instagram://user?username=miss.villy" class="contact-link"><img class="fa-icon large" src="ig.svg"></a>
