--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
           </div>
           <div style="display:flex; justify-content: center; align-items: center; padding: 0.5rem;">
             <img class="fa-icon mr-2" src="mobile.svg">
-            <a href="tel:6980144633" class="contact-link"><b>6980 144 633 (Κα. Μπέτυ)</b></a><br>
+            <a href="tel:6982299742" class="contact-link"><b>6982 299 742 (Κα. Μπέτυ)</b></a><br>
           </div>
         </p>
         <p style="margin-top: 1rem;">Για κράτηση δωματίου, μην ξεχάσετε να αναφέρετε ότι είστε καλεσμένοι στον γάμο μας!</p>
@@ -199,7 +199,7 @@
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite">Honeymoon Fund</h3>
-        <p class="greek-sans">Η φάση είναι <i>“έλα να πάμε στο νησί … μόνο εγώ κι εσύ!”</i><br>IBAN:</p>
+        <p class="greek-sans">Η φάση είναι <i>“έλα να πάμε στο νησί … μόνο εγώ κι εσύ!”</i><br>IBAN: GR13 0260 2330 0001 7020 1904 524</p>
         <hr class="separator">
       </div>
     </div>
