--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           </div>
 
           <h3 class="eng-handwrite" style="font-size: 3rem;">Join us!</h3>
-          <p class="greek-sans" style="margin-top: 0.5rem; margin-bottom: 1.5rem;">Σάββατο<br>30 Ιουλίου 2022<br>6 μ.μ.</p>
+          <p class="greek-sans" style="margin-top: 0.5rem; margin-bottom: 1.5rem;">Σάββατο<br>30 Ιουλίου 2022<br>6 το απόγευμα</p>
           <hr class="separator">
         </div>
         </div>
