--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="theme-color" content="#dec6ff">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:type" content="website" />
     <meta property="og:title" content="Κώστας & Βίλη" />
     <meta property="og:image" content="preview.jpg" />
+    <meta property="og:url" content="https://ktsangop.github.io/savethedate/" />
 
     <link rel="stylesheet" type="text/css" href="./styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
