--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Save the date!" />
     <meta property="og:title" content="Κώστας & Βίλη" />
+    <meta property="og:description" content="Save the date!" />
     <meta property="og:image" content="preview.jpg" />
     <meta property="og:url" content="https://ktsangop.github.io/savethedate/" />
 
