- add formal invitation text

--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite" style="font-size:3rem;">See you all there!</h3>
+        <h4 class="eng-handwrite" style="font-size:1.5rem; margin-top: 1rem; color:white;">Formal invitation to follow</h4>
         <hr class="separator">
       </div>
     </div>
