- Fix iOS IBAN display - Add sroll-me icon on 1st page 1st load

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
           <hr class="separator">
         </div>
         </div>
+        <img id="scroll-me" class="fa-icon animate-1" style="padding-top: 0; filter:none;" src="down.svg">
       </div>
       
       <div class="scroll-snap">
@@ -203,7 +204,7 @@
       <div class="content-section">
         <hr class="separator">
         <h3 class="eng-handwrite">Honeymoon Fund</h3>
-        <p class="greek-sans">Η φάση είναι <i>“έλα να πάμε στο νησί … μόνο εγώ κι εσύ!”</i><br>IBAN: GR13 0260 2330 0001 7020 1904 524</p>
+        <p class="greek-sans">Η φάση είναι <i>“έλα να πάμε στο νησί … μόνο εγώ κι εσύ!”</i><br>IBAN: GR13 &zwj;0260 &zwj;2330 &zwj;0001 &zwj;7020 &zwj;1904 &zwj;524</p>
         <hr class="separator">
       </div>
     </div>
